# ComputationalMathLab2

./: .gitignore  CMakeLists.txt  README.md
include/: cors_middleware.hpp  equation_handler.hpp  system_handler.hpp
include/math/: parser.hpp
include/math/solver/: equation_solver.hpp  solver.hpp  system_solver.hpp
include/math/solver/equation/: chordes_method_solver.hpp  half_split_method_solver.hpp  newton_method_solver.hpp  secance_method_solver.hpp  simple_iteration_method_solver.hpp
src/: main.cpp
src/math/solver/: equation_solver.cpp  solver.cpp  system_solver.cpp
src/math/solver/equation/: chordes_method_solver.cpp  half_split_method_solver.cpp  newton_method_solver.cpp  secance_method_solver.cpp  simple_iteration_method_solver.cpp
